salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/QuickBooks_Record__c.object-meta.xml
<CustomObject>
    <label>QuickBooks Record</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuickBooks Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>