salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/ACCNT__c.field-meta.xml
<CustomField>
    <fullName>ACCNT__c</fullName>
    <label>ACCNT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>