salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/ADDR1__c.field-meta.xml
<CustomField>
    <fullName>ADDR1__c</fullName>
    <label>ADDR1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>