salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/ADDR2__c.field-meta.xml
<CustomField>
    <fullName>ADDR2__c</fullName>
    <label>ADDR2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>