salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/ADDR3__c.field-meta.xml
<CustomField>
    <fullName>ADDR3__c</fullName>
    <label>ADDR3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>