salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT__c</fullName>
    <label>AMOUNT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>