salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/BADDR1__c.field-meta.xml
<CustomField>
    <fullName>BADDR1__c</fullName>
    <label>BADDR1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>