salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/BADDR4__c.field-meta.xml
<CustomField>
    <fullName>BADDR4__c</fullName>
    <label>BADDR4</label>
    <length>200</length>
    <type>Text</type>
</CustomField>