salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/BADDR5__c.field-meta.xml
<CustomField>
    <fullName>BADDR5__c</fullName>
    <label>BADDR5</label>
    <length>200</length>
    <type>Text</type>
</CustomField>