salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/CLEAR__c.field-meta.xml
<CustomField>
    <fullName>CLEAR__c</fullName>
    <label>CLEAR</label>
    <length>200</length>
    <type>Text</type>
</CustomField>