salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/CONT1__c.field-meta.xml
<CustomField>
    <fullName>CONT1__c</fullName>
    <label>CONT1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>