salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/DATE__c.field-meta.xml
<CustomField>
    <fullName>DATE__c</fullName>
    <label>DATE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>