salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/DOCNUM__c.field-meta.xml
<CustomField>
    <fullName>DOCNUM__c</fullName>
    <label>DOCNUM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>