salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/DUEDATE__c.field-meta.xml
<CustomField>
    <fullName>DUEDATE__c</fullName>
    <label>DUEDATE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>