salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <label>EMAIL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>