salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/FAXNUM__c.field-meta.xml
<CustomField>
    <fullName>FAXNUM__c</fullName>
    <label>FAXNUM</label>
    <length>200</length>
    <type>Text</type>
</CustomField>