salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Set_Name__c</fullName>
    <label>Field Set Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InvoiceTrans</fullName>
            </value>
            <value>
                <fullName>InvoiceSplit</fullName>
            </value>
            <value>
                <fullName>BillTrans</fullName>
            </value>
            <value>
                <fullName>BillSplit</fullName>
            </value>
            <value>
                <fullName>VendorList</fullName>
            </value>
            <value>
                <fullName>CustomerList</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>