salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/HIDDEN__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN__c</fullName>
    <label>HIDDEN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>