salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/Invert_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invert_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invert Amount</label>
    <type>Checkbox</type>
</CustomField>