salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/INVTITLE__c.field-meta.xml
<CustomField>
    <fullName>INVTITLE__c</fullName>
    <label>INVTITLE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>