salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/NOTE__c.field-meta.xml
<CustomField>
    <fullName>NOTE__c</fullName>
    <label>NOTE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>