salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/PHONE1__c.field-meta.xml
<CustomField>
    <fullName>PHONE1__c</fullName>
    <label>PHONE1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>