salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/PHONE2__c.field-meta.xml
<CustomField>
    <fullName>PHONE2__c</fullName>
    <label>PHONE2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>