salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/QNTY__c.field-meta.xml
<CustomField>
    <fullName>QNTY__c</fullName>
    <label>QNTY</label>
    <length>200</length>
    <type>Text</type>
</CustomField>