salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/SADDR1__c.field-meta.xml
<CustomField>
    <fullName>SADDR1__c</fullName>
    <label>SADDR1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>