salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/SADDR4__c.field-meta.xml
<CustomField>
    <fullName>SADDR4__c</fullName>
    <label>SADDR4</label>
    <length>200</length>
    <type>Text</type>
</CustomField>