salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/SADDR5__c.field-meta.xml
<CustomField>
    <fullName>SADDR5__c</fullName>
    <label>SADDR5</label>
    <length>200</length>
    <type>Text</type>
</CustomField>