salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/SALUTATION__c.field-meta.xml
<CustomField>
    <fullName>SALUTATION__c</fullName>
    <label>SALUTATION</label>
    <length>200</length>
    <type>Text</type>
</CustomField>