salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/SHIPDATE__c.field-meta.xml
<CustomField>
    <fullName>SHIPDATE__c</fullName>
    <label>SHIPDATE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>