salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <label>sObject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>