salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/SPL__c.field-meta.xml
<CustomField>
    <fullName>SPL__c</fullName>
    <formula>&#39;SPL&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPL</label>
    <type>Text</type>
</CustomField>