salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/TAXID__c.field-meta.xml
<CustomField>
    <fullName>TAXID__c</fullName>
    <label>TAXID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>