salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/TERMS__c.field-meta.xml
<CustomField>
    <fullName>TERMS__c</fullName>
    <label>TERMS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>