salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/TO_PRINT__c.field-meta.xml
<CustomField>
    <fullName>TO_PRINT__c</fullName>
    <label>TO PRINT</label>
    <length>200</length>
    <type>Text</type>
</CustomField>