salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/VEND__c.field-meta.xml
<CustomField>
    <fullName>VEND__c</fullName>
    <formula>&#39;VEND&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VEND</label>
    <type>Text</type>
</CustomField>