salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/fields/VTYPE__c.field-meta.xml
<CustomField>
    <fullName>VTYPE__c</fullName>
    <label>VTYPE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>