salesforce-integration/Salesforce-Components/objects/QuickBooks_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_Name__c</columns>
    <columns>MEMO__c</columns>
    <columns>Field_Set_Name__c</columns>
    <columns>Invert_Amount__c</columns>
    <columns>ACCNT__c</columns>
    <columns>INVITEM__c</columns>
    <columns>AMOUNT__c</columns>
    <columns>sObject__c</columns>
    <columns>Order__c</columns>
    <columns>NAME__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>